--- a/styles.css
+++ b/styles.css
@@ -8,8 +8,10 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(4, 1fr);
-  height: 100vw;
-  grid-gap: 10px;
+  height: 70vw;
+  width: 70vw;
+  margin: 0 auto;
+
 }
 
 .gallery-item {
